[tool.poetry]
name = "voxpop"
version = "0.1.0"
description = ""
authors = ["Rakhymzhan <rakhymzhan0001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
click = "^8.1.7"
fastapi = "0.109.0"
h11 = "^0.14.0"
idna = "^3.6"
pip = "23.2"
pydantic = "2.5.3"
setuptools = "^69.2.0"
sniffio = "^1.3.1"
typing-extensions = "^4.10.0"
uvicorn = "^0.29.0"
wheel = "^0.43.0"
pydantic-core = "2.14.6"
starlette = "0.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
